@@ -6,4 +6,3 @@ autoconf
 libtoolize -f
 ln -s `which libtool` .
 automake -a --foreign 
-exit 0
