@@ -33,5 +33,5 @@ AC_SUBST(PHP_JAVA)
 AM_CONDITIONAL([COND_GCJ], [test "$PHP_JAVA" = "yes"])
 AM_CONDITIONAL([COND_WIN_NO_DLL], [case $host_os in cygwin* | mingw* | pw32*) test $enable_win32_dll = no ;; *) false;; esac])
 
-AC_OUTPUT(Makefile)
+AC_OUTPUT(Makefile_unix Makefile_windows)
 
